# python_code_quality

./: .buildinfo  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  LICENSE  LICENSE.html  README.html  README.md  STYLEGUIDE.html  api.html  azure-pipelines.yml  cli.html  cli.mypackage.html  genindex.html  index.html  mypackage.api.html  mypackage.html  mypackage.subpackage1.html  mypackage.subpackage1.module1.html  mypackage.subpackage2.module2.html  mypackage.utils.html  mypackage.utils.logging.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: main.yml  sphinx.yml
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.mypackage.html  genindex.html  index.html  mypackage.api.html  mypackage.html  mypackage.subpackage1.html  mypackage.subpackage1.module1.html  mypackage.subpackage2.html  mypackage.subpackage2.module2.html  mypackage.utils.html  mypackage.utils.logging.html  py-modindex.html  search.html  searchindex.js
branch/update_dependencies/: LICENSE.html  STYLEGUIDE.html  cli.html  cli.mypackage.html  genindex.html  mypackage.subpackage2.module2.html  objects.inv  search.html
docs/source/: conf.py  index.rst
src/mypackage/: demo_calculus_03.py  demo_calculus_04.py  demo_comments_and_docstrings.py  demo_comments_and_docstrings_02.py  demo_comments_and_docstrings_05.py  demo_comments_and_docstrings_06.py  demo_duck_typing.py  demo_duck_typing_02.py  demo_duck_typing_ipython_session.txt  demo_dynamic_typing_01.py  demo_sourcery.py  demo_sourcery_01.py  demo_sourcery_02.py  demo_type_hints_02.py  demo_type_hints_and_naming.py  demo_type_hints_and_naming_03.py  somewhere_deep_in_an_external_package.py
