[metadata]
name = python_code_quality
version = 0.1.0
summary = python code quality examples.
description = demo code for the Code Quality in Python talk.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://ClaasRostock.github.io/python_code_quality/README.html
project_urls =
    GitHub = https://github.com/ClaasRostock/python_code_quality
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Claas Rostock
author_email = "Claas Rostock" <claas.rostock@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    dictIO>=0.2.9

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    mypackage = mypackage.cli.mypackage:main

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:run]
source = mypackage
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/mypackage
    */site-packages/mypackage

[tox:tox]
isolated_build = True
envlist = py{39,310,311}-{linux,macos,windows}
# envlist = py{39,310,311}-{windows}
# envlist = py{39,310,311}

[testenv]
deps =
    pytest>=7.4
    pytest-cov>=4.1
    pytest-randomly>=3.15
commands =
    pytest --cov --cov-config setup.cfg {posargs}
